--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
         <img  class="logo "src="assets/images/logo.png" alt=""logo>Love Maths
     </h1>
     <div class="game-area">
+        <div class="controls=area"></div>
+        <button class="btn btn --bigbtn--green"></button>
+           <i class="fas fa-plus"></i>
+        <button class="btn btn --bigbtn--blue"></button>
+           <i class="fas fa-minus"></i>
+        <button class="btn btn --bigbtn--orange"></button>
+           <i class="fas fa-times"></i>
+        <button class="btn btn --bigbtn--red"></button>
+            <i class="fas fa-divide"></i>
+    </div>
+    <div class="question-area">
+        <span id="operand1">0</span>
+        <span id="operator">x</span>
+        <span id="operand2">0</span>
+        <span>=</span>
+        <p class="answer-message">Enter answer:</p>
+        <input id="answer-box" type="number">
+        <button class="btn btn--gray">Submit Answer</button>
 
     </div>
 
