--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     </h1>
     <div class="game-area">
         <div class="controls=area"></div>
-        <button class="btn btn --bigbtn--green"></button>
+        <button data-type="addition" class="btn btn --bigbtn--green"></button>
            <i class="fas fa-plus"></i>
-        <button class="btn btn --bigbtn--blue"></button>
+        <button data-type="minus"class="btn btn --bigbtn--blue"></button>
            <i class="fas fa-minus"></i>
-        <button class="btn btn --bigbtn--orange"></button>
+        <button data-type="subraction"  class="btn btn --bigbtn--orange"></button>
            <i class="fas fa-times"></i>
-        <button class="btn btn --bigbtn--red"></button>
+        <button data-type="division" class="btn btn --bigbtn--red"></button>
             <i class="fas fa-divide"></i>
     </div>
     <div class="question-area">
@@ -32,7 +32,7 @@
         <span>=</span>
         <p class="answer-message">Enter answer:</p>
         <input id="answer-box" type="number">
-        <button class="btn btn--gray">Submit Answer</button>
+        <button data-type="submit" class="btn btn--gray">Submit Answer</button>
 
     </div>
 
