add game functions to page

--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
     </h1>
     <div class="game-area">
         <div class="controls=area"></div>
-        <button data-type="addition" class="btn btn --bigbtn--green"></button>
-           <i class="fas fa-plus"></i>
-        <button data-type="minus"class="btn btn --bigbtn--blue"></button>
-           <i class="fas fa-minus"></i>
-        <button data-type="subraction"  class="btn btn --bigbtn--orange"></button>
-           <i class="fas fa-times"></i>
-        <button data-type="division" class="btn btn --bigbtn--red"></button>
-            <i class="fas fa-divide"></i>
+        <button data-type="addition" class="btn btn--big btn--green"><i class="fas fa-plus"></i></button>
+        <button data-type="subtract" class="btn btn--big btn--blue"><i class="fas fa-minus"></i></button>
+        <button data-type="multiply" class="btn btn--big btn--orange"><i class="fas fa-times"></i></button>
+        <button data-type="division" class="btn btn--big btn--red"><i class="fas fa-divide"></i></button>
     </div>
     <div class="question-area">
         <span id="operand1">0</span>
